$Id$

version ? (????-??-??):

  - lms-payments: fixed invoice positions numbering which could 
    involve wrong calculations on invoices with many positions (alec)
  - BTS#0000796: fixed nbtscan use (alec)
  - BTS#0000802: fixed date filter for transfer forms printing of invoices
    created at 00:00 hour (alec)
  - lmsd/payments: fixed buffer overflow in quarterday calculations (alec)

version 1.10.6 Hank (2009-03-27):

  - BTS#0000773: fix transaction date when input date contains spaces (alec)
  - escape config option values on list (alec)
  - fix: make MAC checking case insensitive (alec)
  - cashimport: fix type of imported operations (alec)
  - BTS#0000779: fix typo in documentation for lms-etherdesc (alec)
  - BTS#0000781: fix 'after' column calculations on Balance Sheet (alec)
  - BTS#0000783: fix LOCK TABLES use in mysql drivers (alec)
  - BTS#0000784: fixed pagesize setting for pdf printouts (alec)
  - fixed ethercodes list encoding (alec)
  - lmsd/ewx-pt: fixed mac/ip change detection (alec)
  - lmsd/ewx-stm: fixed double 'offset' use in add_node function (alec)

version 1.10.5 Neith (2008-11-05):

  - don't overwrite invoice's creation time on edit if date wasn't changed (alec)
  - lmsd/payments: fixed leap year bug in annual payments (alec)
  - lms-payments: fixed leap year bug in annual payments (alec)
  - BTS#0000754: fixed year selector in Timetable (alec)
  - LMS::NetworkCompress(): we check if given ip address is not gateway address
    (Arkadiusz Chomicki/alec)
  - documentation: fixed link to cvs tarball (alec)
  - updated ethernet vendors list (alec)
  - updated Smarty to 2.6.20 (alec)

version 1.10.4 Pyrus (2008-05-04):

  - Aliases List: removed unused sql query (alec)
  - BTS#0000732: lmsd/ewx-pt: fixed *TableSave OID (alec)
  - BTS#0000736: fixed assignment addition when taxid is not set (alec)
  - BTS#0000734: fixed problem with \r\n on pdf invoices (alec)
  - Balance Sheet: fixed memory usage problem and increased speed of