@@ -8,6 +8,7 @@ version ? (????-??-??):
   - BTS#0000802: fixed date filter for transfer forms printing of invoices
     created at 00:00 hour (alec)
   - lmsd/payments: fixed buffer overflow in quarterday calculations (alec)
+  - support for 14-characters long REGON identifiers (alec)
 
 version 1.10.6 Hank (2009-03-27):
 
